clusters/mharikmert.dev/default/deployments/deployments-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployments-svc
  name: deployments-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: deployments
  type: ClusterIP
