clusters/mharikmert.dev/default/deployments/deployments-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployments-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: deployments.mharikmert.dev
      http:
        paths:
          - backend:
              service:
                name: deployments-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
